<resources xmlns:tools="http://schemas.android.com/tools">
    <!--Titulos-->
    <string name="app_name">Registro Horas Laborales</string>
    <string name="title_home">BIENVENIDO</string>
    <string name="icon_home_title">Inicio</string>
    <string name="title_dashboard">Ver todos los lugares </string>
    <string name="icon_lugares_title">Lugares</string>
    <string name="title_notifications">Iniciar Sesión</string>
    <string name="icon_sesion_title">Iniciar Sesión</string>
    <string name="title_crear_cuenta">Crear Cuenta</string>
    <string name="title_informacion_lugar">Información Lugar de Trabajo</string>
    <string name="title_crear_lugar">Crear Lugar de Trabajo</string>

    <!--Registro-->
    <string name="CrearCuentaTXT">Información del perfil</string>
    <string name="NombreEt">Nombres</string>
    <string name="ApellidoEt">Apellidos</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="ContaseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Crear Cuenta</string>
    <string name="TengounacuentaTXT">Iniciar sesión</string>

    <!--Cuenta-->
    <string name="tomar_biometria">Foto de perfil biometrico</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="foto">Foto de Perfil</string>
    <string name="perfil_usuario">Información de la cuenta</string>
    <string name="informacion_lugar">Información lugar de trabajo</string>
    <string name="nombre">Nombres: </string>
    <string name="direccion_trabajo">Crear lugar de trabajo</string>
    <string name="contrasenia">Contraseña:</string>
    <string name="correo">Correo:</string>
    <string name="apellido">Apellidos:</string>

    <!--Login-->
    <string name="IniciarSesionTXT">Ingrese sus credenciales</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Iniciar Sesión</string>
    <string name="CrearCuenta">Crear Cuenta</string>

    <!--Lugar Trabajo-->
    <string name="titulo_buscar">Ingrese el nombre del lugar a buscar:</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_guardar">Guardar</string>

    <string name="input_completar">Complete los campos</string>
    <string name="input_ingresar">Ingrese los datos:</string>
    <string name="input_dia">Ingrese día de asistencia:</string>
    <string name="input_hora_entrada">Ingrese hora de entrada:</string>
    <string name="input_hora_salida">Ingrese hora de salida:</string>
    <string name="input_nombre_lugar">Ingrese nombre de la dirección:</string>
    <string name="input_ubicacion">Ubicación actual</string>
    <string name="input_foto">Foto de referencia del lugar</string>


    <string name="titulo_informacion_lugar">Información lugar de trabajo</string>
    <string name="btn_tomar_biometria">Tomar Datos Biometricos</string>
    <string name="btn_tomar_foto">Tomar Foto</string>
    <string name="sub_titulo_informacion_lugar">Información</string>

    <!--Inicio-->
    <string name="titulo_hoy">Planificado para hoy</string>
    <string name="titulo_recientes">Recientes</string>

    <string name="btn_mas_info">Más info</string>
    <string name="lbl_nombre">Nombre:</string>
    <string name="lbl_lugar">Lugar:</string>
    <string name="lbl_estado">Estado:</string>
    <string name="lbl_ubicacion">Ubicación:</string>
    <string name="lbl_hora_inicio">Hora Inicio:</string>
    <string name="lbl_hora_inicio_real">Hora Inicio Real:</string>
    <string name="lbl_hora_fin">Hora Fin:</string>
    <string name="lbl_hora_fin_real">Hora Fin Real:</string>

</resources>