<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dsm.registro.biometrico.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_registrarse"
            app:destination="@id/navigation_registrarse" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dsm.registro.biometrico.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dsm.registro.biometrico.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_registrarse"
            app:destination="@id/navigation_registrarse" />
    </fragment>
    <fragment
        android:id="@+id/navigation_registrarse"
        android:name="com.dsm.registro.biometrico.ui.cuenta.RegistrarseFragment"
        android:label="@string/title_crear_cuenta"
        tools:layout="@layout/fragment_registrarse" >
        <action
            android:id="@+id/action_navigation_registrarse_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_registrarse_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
</navigation>