<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/EstiloContenedorPrincipal"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/titulo_hoy"
                style="@style/EstiloTitulos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHoy"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:scrollbars="vertical" />

            <TextView
                android:text="@string/titulo_recientes"
                style="@style/EstiloTitulos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRecientes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSesion"
                    style="@style/EstiloBotones"
                    android:text="@string/Btn_Logeo"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:layout_weight="3"/>

                <Button
                    android:id="@+id/btnCrearCuenta"
                    style="@style/EstiloBotones"
                    android:text="@string/CrearCuenta"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:layout_weight="3"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>